[#23] 첫번째 response data